--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "image-to-base64": "^2.0.1",
     "ngx-quill": "^8.0.0",
+    "node-base64-image": "^1.0.7",
     "quill": "^1.3.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
